Fix footer looks on smaller devices

--- a/styles/common/global.css
+++ b/styles/common/global.css
@@ -199,7 +199,7 @@ body::-webkit-scrollbar-track {
 }
 
 .ftr {
-  padding: 0rem 2rem 3rem 2rem;
+  padding: 2rem 2rem 1rem 2rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -264,5 +264,10 @@ body::-webkit-scrollbar-track {
   .socials {
     margin-left: 0;
     padding-right: 0;
+  }
+}
+@media screen and (max-width: 434px) {
+  .ftr {
+    padding: 2rem 2rem 4rem 2rem;
   }
 }
